[tool.poetry]
name = "mesa-datagen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mesa_datagen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mesa = "^2.1.2"
faker = "^19.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
