[tool.poetry]
name = "mesa-datagen"
version = "0.1.0"
description = "Mesa_datagen: Use Mesa (Agent-based modeling) for simulation-based synthetic data generation"
authors = ["Giang Ngo <giangblackk@gmail.com>"]
readme = "README.md"
packages = [{include = "mesa_datagen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mesa = "^2.1.2"
faker = "^19.10.0"
sqlalchemy = "^2.0.22"
psycopg = {extras = ["binary"], version = "^3.1.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
